Fixed sonar